--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div class="container">
         <h1 class="head1">Weather-Today</h1>
+        <input type="text" name="city_name" id="cities" value="" placeholder="enter city name...">
         <button id="btn">Search</button>
         <div class="empty_para"></div>
-
 
 
     </div>
